# terraform-precommit-checks

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  .terraform-tags.yaml.example  CLAUDE.md  README.md  check_module_versions.py  check_provider_config.py  check_tfsort.py  check_tofu_integration_tests.py  create_version_tag.sh  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.sh  verify_multi_cloud.sh
.claude/: settings.local.json
docs/: 00_READ_ME_FIRST.txt  DELIVERY_SUMMARY.txt  FILES_MANIFEST.txt  INDEX.md  PROVIDER_CONFIG_MULTI_CLOUD.md  PROVIDER_CONFIG_PATTERNS.md  START_HERE.md  TAG_VALIDATION.md
examples/: example_multi_cloud_module.tf  example_multi_cloud_root.tf
src/: __init__.py  check_module_versions.py  check_provider_config.py  check_template_sync.py  check_terraform_tags.py  check_tfsort.py  check_tofu_integration_tests.py  check_tofu_unit_tests.py
test/: .terraform-tags-patterns-test.yaml  .terraform-tags-test.yaml  README_MODULE_VERSIONS.md  test_aws_new.tf  test_aws_old.tf  test_azure_new.tf  test_azure_old.tf  test_check_terraform_tags.py  test_check_terraform_tags_unit.py  test_gcp_new.tf  test_gcp_old.tf  test_hooks.py  test_module_conflicts.tf  test_module_consistent.tf  test_module_edge_cases.tf  test_module_git_conflicts.tf  test_module_mixed_sources.tf  test_module_registry_conflicts.tf  test_module_versions.py  test_oci_new.tf  test_oci_old.tf  test_provider_config.py  test_tags_invalid.tf  test_tags_patterns_invalid.tf  test_tags_patterns_valid.tf  test_tags_valid.tf  test_template_sync.py  test_terraform_tags.py  test_tfsort.py  test_tfsort_sorted_outputs.tf  test_tfsort_sorted_variables.tf  test_tfsort_unsorted.tf  test_tofu_integration_tests.py  test_tofu_unit_tests.py  tests_README.md
test/integration/: main.tf  main.tftest.hcl
test/template_reference/: .gitignore
test/template_test_repo/: .editorconfig  .terraform-tags.yaml  Jenkinsfile
test/template_test_repo_mismatch/: .editorconfig
test/template_test_repo_mismatch/.github/workflows/: terraform.yml
test/unit/: main.tf  main.tftest.hcl
